# wiki-serve

./: .gitignore  LICENSE  README.md  opencode.json  pyproject.toml  wiki-search-agent-rules.md
scripts/: wiki-search.service
src/wiki_search/: __main__.py  bridge.py  config.py  daemon.py  http_server.py  server.py
src/wiki_search/db/: connection.py  repository.py  schema.py
src/wiki_search/index/: indexer.py  manifest.py  markdown_chunker.py  watcher.py
src/wiki_search/mcp_tools/: read_document.py  read_section.py  reindex.py  search_wiki.py  status.py  utils.py
src/wiki_search/search/: embedder.py  exact_search.py  hybrid_search.py  rank.py
src/wiki_search/web/static/: style.css
src/wiki_search/web/templates/: base.html  document.html  index.html  section.html  status.html
tests/: conftest.py  test_indexer.py  test_markdown_chunker.py  test_search.py
wiki/: topic-overview.md
wiki/adr/: 001-use-sqlite.md
wiki/architecture/: agents.md  overview.md
