[project]
name = "wiki-serve"
version = "0.2.0"
description = "Wiki search service: MCP over HTTP/SSE + web UI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "markdown>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/wiki_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
wiki-serve = "wiki_search.__main__:main"
